--- a/lessons/L11-2.ipynb
+++ b/lessons/L11-2.ipynb
@@ -225,7 +225,7 @@
    "metadata": {},
    "source": [
     "### 2\n",
-    "Write code to open a file output.txt for writing. Then write `pi` from the `math` module to 2 decimal places to the file and close the file."
+    "Write a program that uses a loop to print out every other letter in the upper case alphabet. "
    ]
   },
   {
@@ -233,44 +233,32 @@
    "metadata": {},
    "source": [
     "### 3\n",
-    "Write a program to copy the contents of one file to another. As part of your solution, define and call a function, `copy_file(source, destination)` that accepts two parameters:\n",
-    "1. `source`: the name of the file to copy contents FROM\n",
-    "1. `destination`: the name of the file to copy contents TO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4\n",
-    "The following questions refer to the following code: `course = \"CptS 111 Spring 2017\"`\n",
-    "1. Write code to print the \"2\" in `course`\n",
-    "1. Write code to print the \"111\" in `course` using the slice operator\n",
-    "1. Write code to assign a new variable, `new_course`, `course`, but with \"Summer\" instead of \"Spring\"\n",
-    "1. Write code to overwrite the string stored in `course` in all lower case letters"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 5\n",
-    "(Tricky) The output below is from code with a variable called NUM_STARS set to 5 that determines the number of stars to print on each line (how? :) ). Write code using iterative statements that produces this output for any value of NUM_STARS.\n",
+    "Given the following input file, sentence.txt:\n",
     "\n",
     "```\n",
-    "NUM_STARS 5:\n",
-    "*****5\n",
-    "0\n",
-    "****4\n",
-    "*1\n",
-    "***3\n",
-    "**2\n",
-    "**2\n",
-    "***3\n",
-    "*1\n",
-    "****4\n",
-    "0\n",
-    "*****5\n",
+    "Coding\n",
+    "in\n",
+    "Python\n",
+    "is\n",
+    "SUPER\n",
+    "FUN\n",
+    "```\n",
+    "\n",
+    "Write a program to do the following:\n",
+    "1. Open an input file sentence.txt for reading\n",
+    "1. Open an output file sentence_out.txt for writing\n",
+    "1. Read each line in from the input file and write the following to the output file:\n",
+    "    1. Print the contents of the line followed by a comma\n",
+    "    1. Print the length of the line followed by a newline\n",
+    "\n",
+    "Example sentence_out.txt\n",
+    "```\n",
+    "Coding, 6\n",
+    "in, 2\n",
+    "Python, 6\n",
+    "is, 2\n",
+    "SUPER, 5\n",
+    "FUN, 3\n",
     "```"
    ]
   },
@@ -278,7 +266,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6\n",
+    "### 4\n",
+    "Write a program to prompt the user to enter an integer that is even (for this problem, 0 is neither even nor odd). The code must ensure that en even number is entered. Once an even integer is entered, the program prints the integer to the screen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5\n",
     "Write a `for` loop that sums the squares of the odd integers from -111 to 333 inclusive. "
    ]
   },
@@ -286,8 +282,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 6\n",
+    "The following questions refer to the following code: `course = \"CptS 111 Spring 2017\"`\n",
+    "1. Write code to print the \"2\" in `course`\n",
+    "1. Write code to print the \"111\" in `course` using the slice operator\n",
+    "1. Write code to assign a new variable, `new_course`, `course`, but with \"Summer\" instead of \"Spring\"\n",
+    "1. Write code to overwrite the string stored in `course` in all lower case letters\n",
+    "1. Write code to assign a new variable, `new_string`, `course`, but with the \"111\" replaced with \"121\". Use the `replace()` method to do this.\n",
+    "1. Write code to print the index of the \"2\". Use the `find()` method to do this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 7\n",
-    "Write a function called `sum_multiples_of_2_5()` that returns the sum of the integers in the range [1, 100] inclusive that are multiples of 2 AND 5."
+    "Write code to open a file output.txt for writing. Then write `pi` from the `math` module to 2 decimal places to the file and close the file."
    ]
   },
   {
@@ -320,6 +330,38 @@
    "metadata": {},
    "source": [
     "### 9\n",
+    "Write a function called `sum_multiples_of_2_5()` that returns the sum of the integers in the range [1, 100] inclusive that are multiples of 2 AND 5."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10\n",
+    "(Tricky) The output below is from code with a variable called NUM_STARS set to 5 that determines the number of stars to print on each line (how? :) ). Write code using iterative statements that produces this output for any value of NUM_STARS.\n",
+    "\n",
+    "```\n",
+    "NUM_STARS 5:\n",
+    "*****5\n",
+    "0\n",
+    "****4\n",
+    "*1\n",
+    "***3\n",
+    "**2\n",
+    "**2\n",
+    "***3\n",
+    "*1\n",
+    "****4\n",
+    "0\n",
+    "*****5\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11\n",
     "What is printed by the following nested loop?"
    ]
   },
@@ -341,15 +383,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10 \n",
-    "Write a program to prompt the user to enter an integer that is even (for this problem, 0 is neither even nor odd). The code must ensure that en even number is entered. Once an even integer is entered, the program prints the integer to the screen."
+    "### 12\n",
+    "Write code for a simple menu that displays the output below until 3 (quit) is entered by the user. If the user enters an invalid menu option, inform the user and re-prompt. Once a valid input choice is entered, display “Here are the rules” if 1 is chosen. If 2 is chosen display \"Starting the game\".\n",
+    "\n",
+    "```\n",
+    "Welcome to my game!\n",
+    "1)\tView the rules\n",
+    "2)\tPlay the game\n",
+    "3)\tQuit\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 11\n",
+    "### 13\n",
     "What is the output of the following code segment?"
    ]
   },
@@ -373,58 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 12\n",
-    "Given the following input file, sentence.txt:\n",
-    "\n",
-    "Example sentence.txt\n",
-    "```\n",
-    "Coding\n",
-    "in\n",
-    "Python\n",
-    "is\n",
-    "SUPER\n",
-    "FUN\n",
-    "```\n",
-    "\n",
-    "Write a program to do the following:\n",
-    "1. Open an input file sentence.txt for reading\n",
-    "1. Open an output file sentence_out.txt for writing\n",
-    "1. Read each line in from the input file and write the following to the output file:\n",
-    "    1. Print the contents of the line followed by a comma\n",
-    "    1. Print the length of the line followed by a newline\n",
-    "\n",
-    "Example sentence_out.txt\n",
-    "```\n",
-    "Coding, 6\n",
-    "in, 2\n",
-    "Python, 6\n",
-    "is, 2\n",
-    "SUPER, 5\n",
-    "FUN, 3\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 13\n",
-    "Write a program that uses a loop to print out every other letter in the upper case alphabet. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 14\n",
-    "Write a function called `get_string_length(a_string)` that returns the number of characters in the parameter `a_string`. Do not use `len()` in your solution."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 15\n",
     "The following problem is adapted from problem 5.9 in Hanly and Koffman.\n",
     "\n",
     "Suppose you own a soda distribution that sells Pepsi (ID# 1), Dr. Pepper (ID# 2), Mountain Dew (ID# 3), and Crush (ID# 4) by the case. \n",
@@ -443,6 +441,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## MA17\n",
+    "On a blank sheet of paper, write the following:\n",
+    "1. Your full name\n",
+    "1. Your TA name\n",
+    "1. MA #17\n",
+    "\n",
+    "Individually (or in pairs), solve the above exam review problems that we didn't solve in class. I will give you 1 point for each problem you *correctly* solve. Each student needs to turn in their own solutions to get credit for MA17.\n",
+    "\n",
+    "To study for the exam, I recommend solving each problem on paper, then typing up your code and running it. You can check your work this way. Re-write your final, correct solutions in a neat manner to turn in for credit on MA17.\n",
+    "\n",
     "## TODO\n",
     "1. Please study for the exam! At a *minimum*:\n",
     "    * Work or re-work through:\n",
