--- a/lessons/L11-2.ipynb
+++ b/lessons/L11-2.ipynb
@@ -447,7 +447,7 @@
     "1. Your TA name\n",
     "1. MA #17\n",
     "\n",
-    "Individually (or in pairs), solve the above exam review problems that we didn't solve in class. I will give you 1 point for each problem you *correctly* solve. Each student needs to turn in their own solutions to get credit for MA17.\n",
+    "Individually (or in pairs), solve the above exam review problems that we didn't solve in class. Each *correctly* solved problem is worth 1 point. Each student needs to turn in their own solutions to get credit for MA17.\n",
     "\n",
     "To study for the exam, I recommend solving each problem on paper, then typing up your code and running it. You can check your work this way. Re-write your final, correct solutions in a neat manner to turn in for credit on MA17.\n",
     "\n",
