--- a/lessons/L11-1.ipynb
+++ b/lessons/L11-1.ipynb
@@ -299,12 +299,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "olleh\n",
+      "mada mi madam\n",
+      "amanap lanac a nalp a nam a\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse_string(word):\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    reverse = \"\"\n",
+    "    for i in range(len(word) - 1, -1, -1):\n",
+    "        reverse += word[i]\n",
+    "    return reverse\n",
+    "\n",
+    "print(reverse_string(\"hello\"))\n",
+    "# palindromes (strings that are the same forward as backward)\n",
+    "print(reverse_string(\"madam im adam\"))\n",
+    "print(reverse_string(\"a man a plan a canal panama\"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -316,12 +340,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_reverse_in_place(word1, word2):\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    i = 0\n",
+    "    j = len(word2) - 1\n",
+    "    \n",
+    "    if len(word1) != len(word2):\n",
+    "        return False\n",
+    "    \n",
+    "    while i < len(word1):\n",
+    "        if word1[i] != word2[j]:\n",
+    "            return False\n",
+    "        i += 1\n",
+    "        j -= 1\n",
+    "        \n",
+    "    return True\n",
+    "\n",
+    "print(is_reverse(\"hello\", \"olleh\"))\n",
+    "print(is_reverse(\"hello\", \"olelh\"))"
+   ]
   },
   {
    "cell_type": "markdown",
