--- a/progassignments/PA6.ipynb
+++ b/progassignments/PA6.ipynb
@@ -18,6 +18,8 @@
     "### Learner Objectives\n",
     "At the conclusion of this programming assignment, participants should be able to:\n",
     "* Initialize, manipulate, and display lists.\n",
+    "* Initialize, manipulate, and display tuples.\n",
+    "* Work with 2-dimensional lists.\n",
     "\n",
     "### Prerequisites\n",
     "Before starting this programming assignment, participants should be able to:\n",
