--- a/lessons/L12-2.ipynb
+++ b/lessons/L12-2.ipynb
@@ -47,12 +47,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 10, 20]\n",
+      "[0.2, 0.4, 0.6, 1.0]\n",
+      "[0, 0.0, 1, 1.0, -2]\n",
+      "['cat', 'dog', 'bird']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_ints = [0, 1, 10, 20]\n",
+    "print(list_ints)\n",
+    "\n",
+    "list_floats = [0.2, 0.4, 0.6, 1.0]\n",
+    "print(list_floats)\n",
+    "\n",
+    "# types can be mixed in a list\n",
+    "list_numbers = [0, 0.0, 1, 1.0, -2]\n",
+    "print(list_numbers)\n",
+    "\n",
+    "list_strings = [\"cat\", \"dog\", \"bird\"]\n",
+    "print(list_strings)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,12 +90,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list_ints[0])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,12 +117,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "bird\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(list_strings))\n",
+    "print(list_strings[len(list_strings) - 1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,12 +146,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "empty_list = []\n",
+    "print(len(empty_list))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,12 +174,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 1], [2], [3], [4, 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nested_list = [[0, 1], [2], [3], [4, 5], []]\n",
+    "print(nested_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,12 +217,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+      "1\n",
+      "9\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+    "print(matrix)\n",
+    "# the first element in the first list\n",
+    "print(matrix[0][0])\n",
+    "# the last element in the last list\n",
+    "print(matrix[2][2])\n",
+    "# the middle element in the last list (8)\n",
+    "print(matrix[2][1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,12 +254,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sloan', 'EME', 'Dana', 'ETRL']\n",
+      "['Sloan', 'EME', 'Carpenter', 'ETRL']\n"
+     ]
+    }
+   ],
+   "source": [
+    "buildings = [\"Sloan\", \"EME\", \"Dana\", \"ETRL\"]\n",
+    "print(buildings)\n",
+    "\n",
+    "# modify the list\n",
+    "buildings[2] = \"Carpenter\"\n",
+    "print(buildings)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -190,12 +294,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "twix\n",
+      "reeses\n",
+      "oreos\n",
+      "snickers\n",
+      "twix\n",
+      "reeses\n",
+      "oreos\n",
+      "snickers\n",
+      "twix\n",
+      "reeses\n",
+      "oreos\n",
+      "snickers\n"
+     ]
+    }
+   ],
+   "source": [
+    "candies = [\"twix\", \"reeses\", \"oreos\", \"snickers\"]\n",
+    "\n",
+    "for candy in candies:\n",
+    "    print(candy)\n",
+    "    \n",
+    "i = 0\n",
+    "while i < len(candies):\n",
+    "    print(candies[i])\n",
+    "    i += 1\n",
+    "    \n",
+    "i = 0\n",
+    "for i in range(len(candies)):\n",
+    "    print(candies[i])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -208,12 +345,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['twix', 'reeses', 'oreos', 'peach rings']\n",
+      "['twix', 'reeses', 'oreos', 'peach rings', 'm&ms', 'starburst']\n"
+     ]
+    }
+   ],
+   "source": [
+    "candies = [\"twix\", \"reeses\", \"oreos\", \"peach rings\"]\n",
+    "\n",
+    "print(candies)\n",
+    "candies += [\"m&ms\", \"starburst\"]\n",
+    "print(candies)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,12 +377,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['twix', 'twix', 'twix', 'twix', 'twix']\n",
+      "['twix', 'twix', 'twix', 'twix', 'twix', 'peach rings', 'peach rings', 'peach rings']\n"
+     ]
+    }
+   ],
+   "source": [
+    "bag_o_candies = 5 * [\"twix\"]\n",
+    "print(bag_o_candies)\n",
+    "\n",
+    "bag_o_candies += 3 * [\"peach rings\"]\n",
+    "print(bag_o_candies)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,12 +409,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['reeses', 'oreos']\n",
+      "['twix', 'reeses', 'oreos', 'snickers']\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(candies[1:3])\n",
+    "# returns a copy\n",
+    "print(candies[:])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -258,12 +440,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['twix', 'reeses', 'oreos', 'peach rings']\n",
+      "['twix', 'reeses', 'oreos', 'butterfinger', 'heath', 'swedish fish']\n",
+      "['carmello', 'airheads', 'oreos', 'butterfinger', 'heath', 'swedish fish']\n"
+     ]
+    }
+   ],
+   "source": [
+    "candies = [\"twix\", \"reeses\", \"oreos\", \"peach rings\"]\n",
+    "print(candies)\n",
+    "candies[3:] = [\"butterfinger\", \"heath\", \"swedish fish\"]\n",
+    "print(candies)\n",
+    "candies[0:2] = [\"carmello\", \"airheads\"]\n",
+    "print(candies)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -275,12 +474,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('x', 'y', 'z')\n",
+      "<class 'tuple'>\n",
+      "(1,)\n",
+      "a\n",
+      "<class 'str'>\n",
+      "()\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_tuple = \"x\", \"y\", \"z\"\n",
+    "print(my_tuple)\n",
+    "print(type(my_tuple))\n",
+    "\n",
+    "# need a comma after a single element initialization\n",
+    "my_tuple2 = (1, )\n",
+    "print(my_tuple2)\n",
+    "\n",
+    "# need a comma after a single element initialization\n",
+    "not_a_tuple = (\"a\")\n",
+    "print(not_a_tuple)\n",
+    "print(type(not_a_tuple))\n",
+    "\n",
+    "# creating an empty tuple\n",
+    "empty_tuple = tuple()\n",
+    "print(empty_tuple)\n",
+    "print(type(empty_tuple))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -291,12 +522,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y\n",
+      "('x', 'y')\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_tuple = (\"x\", \"y\", \"z\")\n",
+    "print(my_tuple[1])\n",
+    "print(my_tuple[0:2])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -307,12 +551,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-dfbe487f882d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mmy_tuple\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m\"x\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"y\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"z\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# crashes! tuples are immutable, you cannot change them\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mmy_tuple\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"a\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "my_tuple = (\"x\", \"y\", \"z\")\n",
+    "# crashes! tuples are immutable, you cannot change them\n",
+    "my_tuple[2] = \"a\""
+   ]
   },
   {
    "cell_type": "markdown",
