--- a/progassignments/PA6.ipynb
+++ b/progassignments/PA6.ipynb
@@ -82,7 +82,7 @@
     "```\n",
     "\n",
     "With these values, the pixel in the first column and first row has a RGB value of (255, 0, 0), which equates to red. The pixel in the last column and the first row has a RGB value of (255, 255, 255), which equates to white. A blown-up image containing these values would look like:\n",
-    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/fourbyfour.png\" width=200>\n",
+    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/fourbyfour.png\" width=\"200\">\n",
     "Note: You can explore RGB color values at [this website](http://www.colorpicker.com/)."
    ]
   },
@@ -97,7 +97,7 @@
     "#### Example PPM Image\n",
     "Download this PPM image of the NY sky line: [ny.ppm](https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/files/ny.ppm). You can open the image with software such as [Ifranview](http://www.irfanview.com/) to view it as an image. You can also open it as a text file (in Spyder IDE or a text editor) to view it as plain text (useful for debugging your code!).\n",
     "\n",
-    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny.png\" width=400>\n",
+    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny.png\" width=\"400\">\n",
     "(Image from [https://pixabay.com/en/new-york-skyline-manhattan-hudson-540807/](https://pixabay.com/en/new-york-skyline-manhattan-hudson-540807/))"
    ]
   },
@@ -199,43 +199,43 @@
     "\n",
     "#### Original\n",
     "[ny.ppm](https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/files/ny.ppm):\n",
-    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny.png\" width=400>\n",
+    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny.png\" width=\"400\">\n",
     "\n",
     "#### Vertical Flip\n",
     "[ny_vertical_flip.ppm](https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/files/ny_vertical_flip.ppm):\n",
-    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_vertical_flip.png\" width=400>\n",
+    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_vertical_flip.png\" width=\"400\">\n",
     "\n",
     "#### Horizontal Flip\n",
     "([ny_horizontal_flip.ppm)](https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/files/ny_horizontal_flip.ppm):\n",
-    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_horizontal_flip.png\" width=400>\n",
+    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_horizontal_flip.png\" width=\"400\">\n",
     "\n",
     "#### Remove Red\n",
     "[ny_remove_red.ppm](https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/files/ny_remove_red.ppm):\n",
-    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_remove_red.png\" width=400>\n",
+    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_remove_red.png\" width=\"400\">\n",
     "\n",
     "#### Remove Green\n",
     "[ny_remove_green.ppm](https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/files/ny_remove_green.ppm):\n",
-    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_remove_green.png\" width=400>\n",
+    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_remove_green.png\" width=\"400\">\n",
     "\n",
     "#### Remove Blue\n",
     "[ny_remove_blue.ppm](https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/files/ny_remove_blue.ppm):\n",
-    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_remove_blue.png\" width=400>\n",
+    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_remove_blue.png\" width=\"400\">\n",
     "\n",
     "#### Negate\n",
     "[ny_negative.ppm](https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/files/ny_negative.ppm):\n",
-    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_negative.png\" width=400>\n",
+    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_negative.png\" width=\"400\">\n",
     "\n",
     "#### High Contrast\n",
     "[ny_high_contrast.ppm](https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/files/ny_high_contrast.ppm):\n",
-    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_high_contrast.png\" width=400>\n",
+    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_high_contrast.png\" width=\"400\">\n",
     "\n",
     "#### Random Noise\n",
     "[ny_random_50.ppm](https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/files/ny_random_50.ppm):\n",
-    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_random_50.png\" width=400>\n",
+    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_random_50.png\" width=\"400\">\n",
     "\n",
     "#### Gray Scale\n",
     "[ny_gray_scale.ppm](https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/files/ny_gray_scale.ppm):\n",
-    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_gray_scale.png\" width=400>"
+    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_gray_scale.png\" width=\"400\">"
    ]
   },
   {
@@ -251,7 +251,7 @@
     "Implement a \"horizontal blur\" which will replace every 5 RGB triples with the average of those 5 RGB triples. More specifically, a red value will be replaced with the average of itself and its four adjacent red values. Your program will do this for the green and blue values as well. Note that pixels on the edges will have to be handled specially.\n",
     "\n",
     "[ny_horizontal_blur.ppm](https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/files/ny_horizontal_blur.ppm):\n",
-    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_horizontal_blur.png\" width=400>\n",
+    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/ny_horizontal_blur.png\" width=\"400\">\n",
     "\n",
     "#### Input File Validation Using the `os` Module (5 pts)\n",
     "Validate the input file specified by the user is valid, i.e. the input file adheres to the following requirements:\n",
