--- a/labs/Lab13.ipynb
+++ b/labs/Lab13.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "\n",
     "### Notes\n",
-    "1. If for some reason you are unable to get the necessary software installed and working properly, *there are tasks in this lab that you can solve without the hardware.* Tasks that require the hardware are labeled.\n",
+    "1. If for some reason you are unable to get the necessary software installed and working properly, *pair up with someone or work on tasks from Lab 12.*\n",
     "1. Please **be gentle** with the hardware, especially the wires and the connection points\n",
     "1. Please **do not turn the lights on full brightness**. It is incredibly bright! To programmatically dim the lights, use less intense RGB values for your colors. For example, let `brightness = 50`:\n",
     "    1. `white = (brightness, brightness, brightness)` instead of `white = (255, 255, 255)`\n",
