--- a/lessons/L13-1.ipynb
+++ b/lessons/L13-1.ipynb
@@ -38,12 +38,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number items: 5\n",
+      "['pizza', 'pasta', 'bread', 'salad', 'candy']\n",
+      "pizza, pasta, bread, salad, candy, candy\n"
+     ]
+    }
+   ],
+   "source": [
+    "fav_foods = [\"pizza\", \"pasta\", \"bread\", \"salad\", \"ice cream\"]\n",
+    "print(\"Number items: %d\" %(len(fav_foods)))\n",
+    "fav_foods[-1] = \"candy\"\n",
+    "print(fav_foods)\n",
+    "for i in range(len(fav_foods)):\n",
+    "    print(fav_foods[i], end=\", \")\n",
+    "print(fav_foods[-1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -303,7 +321,7 @@
     "\n",
     "In pairs (or individually), solve the following problems. Each student needs to turn in their own paper to get credit for MA18.\n",
     "\n",
-    "Write a program that generates 100 numbers between 1 and 500 inclusive and puts them in a list. The program then does the following using the list:\n",
+    "Write a program that generates 100 numbers between 1 and 200 inclusive and puts them in a list. The program then does the following using the list:\n",
     "* Prints the numbers\n",
     "* Sorts the numbers\n",
     "* Prints the largest and smallest number in the list\n",
@@ -335,7 +353,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -413,7 +431,7 @@
    "metadata": {},
    "source": [
     "### (Tricky) Step 7\n",
-    "Write code that prompts the user for a number between 1 and 500 and removes all instances of that item from the list (if it is in the list). If the number is not in the list print the message: \"Sorry, your number is not here!\""
+    "Write code that prompts the user for a number between 1 and 200 and removes all instances of that item from the list (if it is in the list). If the number is not in the list print the message: \"Sorry, your number is not here!\""
    ]
   },
   {
