--- a/lessons/L13-2.ipynb
+++ b/lessons/L13-2.ipynb
@@ -259,7 +259,7 @@
    "metadata": {},
    "source": [
     "## Returning Lists\n",
-    "We can write functions that return lists. Consider a function that returns a list of numbers from arguments `start_index` to `end_index + 1`:"
+    "We can write functions that return lists. Consider a function that returns a list of numbers from arguments `start_index` (inclusive) to `end_index` (exclusive):"
    ]
   },
   {
