--- a/progassignments/PA6.ipynb
+++ b/progassignments/PA6.ipynb
@@ -132,6 +132,8 @@
     "1. `process_header(infile, outfile)`: Accepts input and output file objects. Writes the first three lines of the input image to the output image (no need to modify these lines)\n",
     "1. `process_body(infile, outfile, modification)`:  Accepts an input file object, output file object, and a string representing the modification to apply. Calls `load_image_data()` and calls the appropriate function to apply the specified modification according to `modification`. \n",
     "1. `load_image_data(infile)`: Accepts an input file object. Reads the data in from the input PPM image into a 2-dimensional list of RGB tuples. Returns the 2-dimensional list.\n",
+    "\n",
+    "Note: with the above functional decomposition we are going to open/process/close the input file for *every* modification. Is this necessary? **If you state in a comment block at the top of the code that you are going to implement this more efficient approach, you are free to change the above function headers.**\n",
     "    \n",
     "Required *image modification* functions:\n",
     "1. `apply_vertical_flip(image_2dlist, outfile)`: Accepts a 2-dimensional list of tuples and an output file object. Flips the image data in `image_2dlist` vertically. \n",
