--- a/lessons/L14-2.ipynb
+++ b/lessons/L14-2.ipynb
@@ -29,10 +29,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def nested_sum(list_to_sum):\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    accumulator = 0\n",
+    "    for i in range(len(list_to_sum)):\n",
+    "        row = list_to_sum[i]\n",
+    "        for j in range(len(row)):\n",
+    "            accumulator += row[j]\n",
+    "    return accumulator\n",
+    "\n",
+    "print(nested_sum([[1, 2], [3], [4, 5, 6]]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,10 +59,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def split_the_list(list_to_split):\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    index_at_half = len(list_to_split) // 2\n",
+    "    \n",
+    "    first_half = list_to_split[:index_at_half]\n",
+    "    second_half = list_to_split[index_at_half:]\n",
+    "    \n",
+    "    return [first_half, second_half]\n",
+    "\n",
+    "my_list = [5, 6, 3, 7, 4]\n",
+    "halves = split_the_list(my_list)\n",
+    "first_half = halves[0]\n",
+    "second_half = halves[1]\n",
+    "\n",
+    "print(my_list)\n",
+    "print(\"First half\")\n",
+    "print(first_half)\n",
+    "print(\"Second half\")\n",
+    "print(second_half)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -158,7 +193,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'X': 10, 'I': 1, 'V': 5, 'L': 50}\n"
+      "{'V': 5, 'L': 50, 'I': 1, 'X': 10}\n"
      ]
     }
    ],
@@ -178,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -187,7 +222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('X', 10), ('I', 1), ('V', 5), ('L', 50)]\n"
+      "[('V', 5), ('L', 50), ('I', 1), ('X', 10)]\n"
      ]
     }
    ],
@@ -410,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -419,8 +454,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'o': 1, 'l': 2, 'e': 1, 'h': 1}\n",
-      "{'s': 4, 'i': 4, 'm': 1, 'p': 2}\n"
+      "{'h': 1, 'e': 1, 'l': 2, 'o': 1}\n",
+      "{'i': 4, 'm': 1, 'p': 2, 's': 4}\n"
      ]
     }
    ],
@@ -451,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
