--- a/labs/Lab14.ipynb
+++ b/labs/Lab14.ipynb
@@ -47,11 +47,11 @@
    "metadata": {},
    "source": [
     "## Task 0\n",
-    "Recall a dictionary is a list of key-value pairs. The following tasks work with dictionaries where each key is an integer and each key's value is the square of they key. For example 5 (key) maps to 25 (value). Write code to perform the following tasks:\n",
+    "Recall a dictionary is a list of key-value pairs. The following tasks work with dictionaries where each key is an integer and each key's value is the square of the key. For example 5 (key) maps to 25 (value).\n",
     "1. Write code to populate a dictionary with keys 1 through 10 inclusive.\n",
     "1. Write a function that accepts a dictionary and returns a two-item tuple. The first item in the tuple is the sum of the keys. The second item in the tuple is the sum of the values.\n",
     "1. Write a function that accepts a key and a dictionary. The function removes the key-value pair from the dictionary.\n",
-    "    * Hint: could how we delete items from lists help us out deleting an item from a dictionary?"
+    "    * Hint: what are some ways we delete items from lists?"
    ]
   },
   {
@@ -59,7 +59,9 @@
    "metadata": {},
    "source": [
     "## Task 1\n",
-    "Write program creates and returns a dictionary from two lists. As part of your solution, define a function called `parallel_lists_to_dict(keys, values)` that accepts two lists of equal length. At each index position `i`, `keys[i]` is a key that maps to a value `values[i]`. Construct the dictionary accordingly.\n",
+    "Write a program creates and returns a dictionary from two *parallel* lists. As part of your solution, define a function called `parallel_lists_to_dict(keys, values)` that accepts two lists of equal length. \n",
+    "\n",
+    "Hint: At each index position `i`, `keys[i]` is a key that maps to a value `values[i]`. Construct the dictionary accordingly.\n",
     "\n",
     "Example:\n",
     "\n",
@@ -95,7 +97,7 @@
    "metadata": {},
    "source": [
     "## Task 3\n",
-    "Write a Python program to combine two dictionary adding values for common keys. As part of your solution, define a function that accepts two dictionaries and returns the merged dictionary.\n",
+    "Write a Python program to combine two dictionaries by adding values for common keys. As part of your solution, define a function that accepts two dictionaries and returns the merged dictionary.\n",
     "\n",
     "Example: \n",
     "\n",
@@ -169,7 +171,7 @@
    "metadata": {},
    "source": [
     "## Task 5\n",
-    "Write a Python program to print all unique values in a dictionary. As part of your solution, define a function that accepts a dictionary and returns a list of unique values in the dictionary.\n",
+    "Write a Python program that prints all unique values in a dictionary. As part of your solution, define a function that accepts a dictionary and returns a list of unique values in the dictionary.\n",
     "\n",
     "Example:\n",
     "\n",
@@ -186,7 +188,7 @@
     "## Task 6\n",
     "Recall a substring is a fragment of a longer string. For example \"gram\" is a substring of \"program\". Write a predicate function called `is_substring(orig, sub)` that returns `True` if `sub` is a substring of `orig`.\n",
     "\n",
-    "Note: Do not use the reserved keyword `in` in your solution. Also, do not use any string methods! You don't need them\n",
+    "Note: Do not use the reserved keyword `in` in your solution. Also, do not use any string methods! You don't need them :)\n",
     "\n",
     "Note: The empty string is a substring of any other string. \n",
     "\n",
