--- a/lessons/L15-1.ipynb
+++ b/lessons/L15-1.ipynb
@@ -188,7 +188,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -205,7 +205,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -224,7 +224,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -234,11 +234,7 @@
    "metadata": {},
    "source": [
     "### 4\n",
-    "Write a program that prompts the user for a *single letter*. If the user enters a valid letter (upper or lower case), tell them a *random* word that *starts with that letter* from [words.txt](http://thinkpython2.com/code/words.txt). If the user doesn't enter a letter, tell them what they did enter, either:\n",
-    "* A digit\n",
-    "* A string of more than one letter\n",
-    "\n",
-    "And re-prompt until a valid letter is entered.\n",
+    "Write a program that prompts the user for a *single letter*. If the user enters a valid letter (upper or lower case), tell them a *random* word that *starts with that letter* from [words.txt](http://thinkpython2.com/code/words.txt). If the user enters a string of more than one letter, tell them their response is invalid and re-prompt until a valid letter is entered.\n",
     "\n",
     "Define functions where appropriate!"
    ]
@@ -247,7 +243,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -262,8 +258,10 @@
     "Note: the first line in the file is the header describing the order of the attributes. Each line after the header represents a single passenger's attributes.\n",
     "\n",
     "Based on this data, answer the following questions:\n",
-    "* What percentage of those that survived were children?\n",
-    "* Of the male crew members, what percentage survived? \n",
+    "1. How many people on board (according to this dataset)?\n",
+    "1. How many survived? Of the total number of people, what percentage survived?\n",
+    "1. How many children survived? Of the total number of children, what percentage survived?\n",
+    "1. How many male crew members were there? Of the total male crew members, what percentage survived? \n",
     "    * What about the female crew members? \n",
     "    * What are your observations about these findings?\n",
     "\n",
@@ -274,7 +272,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": []
